ability to define borders on areas

--- a/src/examples/area-basic.html
+++ b/src/examples/area-basic.html
@@ -44,7 +44,7 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 area: {
                     visible: true
                 },
@@ -53,18 +53,17 @@
                 },
                 markers: {
                     visible: false
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            piechart: {
-                innerRadius: 0.7
-            },
-            legend: {
+            legendArea: {
                 title: "Country",
                 position: "right",
                 width: 200
             },
-            title: {
+            titleArea: {
                 text: "Area Chart - Basic",
                 align: "center",
                 height: 50
