--- a/src/examples/area-negative.html
+++ b/src/examples/area-negative.html
@@ -30,7 +30,7 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 area: {
                     visible: true
                 },
@@ -39,18 +39,17 @@
                 },
                 markers: {
                     visible: true
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            piechart: {
-                innerRadius: 0.7
-            },
-            legend: {
+            legendArea: {
                 title: "Who?",
                 position: "right",
                 width: 200
             },
-            title: {
+            titleArea: {
                 text: "Area Chart - Negative values",
                 align: "center",
                 height: 50
