--- a/src/examples/area-stepbefore.html
+++ b/src/examples/area-stepbefore.html
@@ -27,7 +27,7 @@
         };
 
 		var options = {
-            plotArea: {
+            plotOptions: {
                 area: {
                     visible: true
                 },
@@ -36,15 +36,17 @@
                 },
                 markers: {
                     visible: true
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Who?",
                 position: "right",
                 width: 200
             },
-            title: {
+            titleArea: {
                 text: "Area Chart - Step Before",
                 align: "center",
                 height: 50
