--- a/src/examples/bar-labels.html
+++ b/src/examples/bar-labels.html
@@ -33,12 +33,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Continent",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Bar Chart - Labels",
                 align: "center",
                 height: 50
