--- a/src/examples/bar-stacked.html
+++ b/src/examples/bar-stacked.html
@@ -33,12 +33,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Who?",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Bar Chart - Stacked",
                 align: "center",
                 height: 50
