--- a/src/examples/bubble.html
+++ b/src/examples/bubble.html
@@ -36,6 +36,9 @@
         };
 
         var options = {
+            plotOptions: {
+
+            },
             plotArea: {
                 line: {
                     interpolation: "linear"
@@ -46,12 +49,12 @@
                 },
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Series",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Bubble Chart",
                 align: "center",
                 height: 50
