--- a/src/examples/column-dual-axes.html
+++ b/src/examples/column-dual-axes.html
@@ -36,12 +36,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Rainfall vs Temperature",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Column Chart - Dual Axes",
                 align: "center",
                 height: 50,
