--- a/src/examples/column-negative-stack.html
+++ b/src/examples/column-negative-stack.html
@@ -40,12 +40,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Category",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Column Chart - Negative Stack",
                 align: "center",
                 height: 50
