--- a/src/examples/column-range.html
+++ b/src/examples/column-range.html
@@ -28,12 +28,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Who?",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Column Chart - Range",
                 align: "center",
                 height: 50
