--- a/src/examples/column-stacked-percent.html
+++ b/src/examples/column-stacked-percent.html
@@ -52,12 +52,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Population",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Column Chart - 100% Stacked",
                 align: "center",
                 height: 50
