--- a/src/examples/column-stacked.html
+++ b/src/examples/column-stacked.html
@@ -45,12 +45,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Population",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Column Chart - Stacked",
                 align: "center",
                 height: 50
