--- a/src/examples/combo.html
+++ b/src/examples/combo.html
@@ -39,20 +39,22 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 markers: {
                     visible: true,
                     size: 6,
                     type: "circle"
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Rainfall vs Temperature",
                 position: "right",
                 width: 200
             },
-            title: {
+            titleArea: {
                 text: "Combo Chart",
                 align: "center",
                 height: 50,
