--- a/src/examples/donut-basic.html
+++ b/src/examples/donut-basic.html
@@ -24,18 +24,20 @@
         };
 
 		var options = {
-            plotArea: {
-                padding: 20,
+            plotOptions: {
                 pie: {
                     innerRadius: 0.6
                 }
             },
-            legend: {
+            plotArea: {
+                padding: 20
+            },
+            legendArea: {
                 title: "Browsers",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Donut Chart - Basic",
                 align: "center",
                 height: 50
