--- a/src/examples/donut-multiple-series.html
+++ b/src/examples/donut-multiple-series.html
@@ -36,18 +36,20 @@
         };
 
         var options = {
-            plotArea: {
-                padding: 20,
+            plotOptions: {
                 pie: {
                     innerRadius: 0.6
                 }
             },
-            legend: {
+            plotArea: {
+                padding: 20
+            },
+            legendArea: {
                 title: "Year",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Pie Chart - Multiple Series",
                 align: "center",
                 height: 50
