--- a/src/examples/line-basic-cross-markers.html
+++ b/src/examples/line-basic-cross-markers.html
@@ -33,22 +33,24 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 line: {
                     interpolation: "linear"
                 },
                 markers: {
                     visible: true,
                     type: "cross"
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "City",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Line Chart - Basic",
                 align: "center",
                 height: 50
