--- a/src/examples/line-labels.html
+++ b/src/examples/line-labels.html
@@ -27,21 +27,23 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 line: {
                     interpolation: "linear"
                 },
                 markers: {
                     visible: true
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "City",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Line Chart - Labels",
                 align: "center",
                 height: 50
