--- a/src/examples/line-stacked-percent.html
+++ b/src/examples/line-stacked-percent.html
@@ -30,21 +30,23 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 line: {
                     interpolation: "linear"
                 },
                 markers: {
                     visible: false
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Company",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Line Chart - 100% Stacked",
                 align: "center",
                 height: 50
