--- a/src/examples/area-range.html
+++ b/src/examples/area-range.html
@@ -37,25 +37,27 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 area: {
                     visible: true
                 },
                 line: {
-                    interpolation: "linear"
+                    interpolation: "cardinal"
                 },
                 markers: {
                     visible: true,
                     type: "circle"
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Rainfall vs Temperature",
                 position: "right",
                 width: 200
             },
-            title: {
+            titleArea: {
                 text: "Area Chart - Range",
                 align: "center",
                 height: 50,
