--- a/src/examples/bar-long-labels.html
+++ b/src/examples/bar-long-labels.html
@@ -36,12 +36,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Continent",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Bar Chart - Long Labels",
                 align: "center",
                 height: 50
