--- a/src/examples/column-basic.html
+++ b/src/examples/column-basic.html
@@ -40,12 +40,12 @@
             plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Who?",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Column Chart - Basic",
                 align: "center",
                 height: 50,
