--- a/src/examples/line-rotated-cat-labels.html
+++ b/src/examples/line-rotated-cat-labels.html
@@ -31,21 +31,23 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 line: {
                     interpolation: "cardinal"
                 },
                 markers: {
                     visible: true
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Rainfall vs Temperature",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Line Chart - Rotated Axes Labels",
                 align: "center",
                 height: 50,
