--- a/src/examples/scatterplot.html
+++ b/src/examples/scatterplot.html
@@ -36,22 +36,24 @@
         };
 
         var options = {
-            plotArea: {
+            plotOptions: {
                 line: {
                     interpolation: "linear"
                 },
                 markers: {
                     visible: true,
                     type: "circle"
-                },
+                }
+            },
+            plotArea: {
                 padding: 20
             },
-            legend: {
+            legendArea: {
                 title: "Series",
                 position: "right",
                 width: 200
             },
-            title: {
+           titleArea: {
                 text: "Scatter Chart",
                 align: "center",
                 height: 50
