--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 
     <script>
         var options = {
-            plotArea: {
+            plotOptions: {
                 animation: {
                     duration: 500,
                     ease: "linear"
@@ -64,20 +64,48 @@
                     size: 6,
                     type: "circle"
                 },
-                padding: 20,
                 pie: {
                     innerRadius: 0.5
                 }
             },
-            title: {
+            plotArea: {
+                border: {
+                    bottom: false,
+                    left: false,
+                    right: false,
+                    top: false
+                },
+                padding: 50
+            },
+            canvas: {
+                border: {
+                    bottom: true,
+                    left: true,
+                    right: true,
+                    top: true
+                }
+            },
+            titleArea: {
                 align: "center",
+                border: {
+                    bottom: true,
+                    left: false,
+                    right: false,
+                    top: false
+                },
                 height: 50,
                 margin: 0,
                 position: "top",
                 subtitle: "Source: wikipedia.org",
                 text: "Rainfall vs Temperature",
             },
-            legend: {
+            legendArea: {
+                border: {
+                    bottom: false,
+                    left: false,
+                    right: true,
+                    top: false
+                },
                 title: "Rainfall vs Temperature",
                 position: "left",
                 width: 200,
@@ -125,7 +153,7 @@
                 labels: {
                     visible : true,
                     format: ".4f",
-                    rotate: false
+                    rotate: true
                 },
                 1: {
                     format: ".2f"
