--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
                 labels: {
                     visible : true,
                     format: ".4f",
-                    rotate: true
+                    rotate: false
                 },
                 1: {
                     format: ".2f"
