--- a/src/index.html
+++ b/src/index.html
@@ -40,216 +40,6 @@
         </div>
     </div>
     <div id="chart" class="chart" />
-
-    <script>
-
-        var options = {
-            plotOptions: {
-                animation: {
-                    duration: 500,
-                    ease: "linear"
-                },
-                area: {
-                    visible: true,
-                    opacity: 0.3
-                },
-                bands: {
-                    innerPadding: 0.2,
-                    outerPadding: 0
-                },
-                line: {
-                    interpolation: "cardinal"
-                },
-                markers: {
-                    visible: true,
-                    size: 6,
-                    type: "circle"
-                },
-                pie: {
-                    innerRadius: 0.5
-                }
-            },
-            plotArea: {
-                border: {
-                    bottom: false,
-                    left: false,
-                    right: false,
-                    top: false
-                },
-                padding: 50
-            },
-            canvas: {
-                border: {
-                    bottom: true,
-                    left: true,
-                    right: true,
-                    top: true
-                }
-            },
-            titleArea: {
-                align: "center",
-                border: {
-                    bottom: true,
-                    left: false,
-                    right: false,
-                    top: false
-                },
-                height: 50,
-                margin: 0,
-                position: "top",
-                subtitle: "Source: wikipedia.org",
-                text: "Rainfall vs Temperature",
-            },
-            legendArea: {
-                border: {
-                    bottom: false,
-                    left: false,
-                    right: true,
-                    top: false
-                },
-                title: "Rainfall vs Temperature",
-                position: "left",
-                width: 200,
-                height: 200
-            },
-            xAxis: [{
-                gridlines: "none",
-                labels: {
-                    rotate: -45
-                },
-                orient: "bottom",
-                tickmarks: true,
-                title: {
-                    align: "center",
-                    text: "Month"
-                }
-            }],
-            yAxis: [{
-                name: "Rainfall",
-                gridlines: "major",
-                labels: {
-                    rotate: 0
-                },
-                orient: "left",
-                tickmarks: true,
-                title: {
-                    text: "",
-                    valign: "middle"
-                }
-            },
-            {
-                name: "Temperature",
-                gridlines: "none",
-                labels: {
-                    rotate: 0
-                },
-                orient: "right",
-                tickmarks: true,
-                title: {
-                    text: "",
-                    valign: "middle"
-                }
-            }],
-            series: {
-                labels: {
-                    visible : true,
-                    format: ".4f",
-                    rotate: false
-                },
-                1: {
-                    format: ".2f"
-                },
-                2: {
-                    format: ".2f"
-                },
-                3: {
-                    format: ".1f"
-                }
-            },
-            tooltip: {
-                title: "Rainfall vs Temperature"
-            }
-        };
-
-        var el = document.getElementById('chart');
-        //var url = "data/empty.txt";
-        var url = "data/multiple-axes.txt";
-        //var url = "data/scatterplot.txt";
-        //var url = "data/Actuals-vs-Budget.txt";
-        //var url = "data/area-basic-1serie-ordinal.txt";
-        //var url = "data/area-basic-nserie-ordinal.txt";
-        //var url = "data/area-negative-1serie-ordinal.txt";
-        //var url = "data/area-negative-nserie-ordinal.txt";
-        //var url = "data/area-negative-inverted-1serie-ordinal.txt";
-        //var url = "data/area-negative-inverted-nserie-ordinal.txt";
-        //var url = "data/settings-time-1.txt";
-        //var url = "data/settings-time-2.txt";
-        //var url = "data/settings-time-3.txt";
-
-        $.get(url, function (data) {
-
-            // Initialize
-            var data = $.parseJSON(data);
-            // Draw initial chart
-            var chart = new LineChart("#chart", data, options);
-            chart.draw();
-
-            document.getElementById("type").onchange = function () {
-                document.getElementById('chart').innerHTML = "";
-                var val = this.options[this.selectedIndex].value;
-                switch (val) {
-                    case "column":
-                        var chart = new ColumnChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "combo":
-                        var chart = new ComboChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "stackedcolumn":
-                        var chart = new StackedColumnChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "stackedpercentcolumn":
-                        var chart = new StackedPercentColumnChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "bar":
-                        var chart = new BarChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "stackedbar":
-                        var chart = new frnk.UI.Charts.StackedBarChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "stackedpercentbar":
-                        var chart = new StackedPercentBarChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "line":
-                        var chart = new LineChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "stackedline":
-                        var chart = new StackedLineChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "stackedpercentline":
-                        var chart = new StackedPercentLineChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "scatter":
-                        var chart = new ScatterChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                    case "pie":
-                        var chart = new PieChart("#chart", data, options);
-                        chart.draw();
-                        break;
-                }
-            };
-        });
-
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
