Use gulp-typescript for compiling typescript sources

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,6 @@
         </div>
     </div>
     <div id="chart" class="chart" />
-    <script src="js/d3.charts.js"></script>
+    <script src="js/index.bundle.js"></script>
 </body>
 </html>
