--- a/src/examples/area-range.html
+++ b/src/examples/area-range.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Area Chart - Range</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
-    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../dist/js/d3.charts.js"></script>
+    <script src="../../dist/js/lib.bundle.js"></script>
 </head>
+
 <body>
     <div id="chart" />
     <script>
-
         var data = {
             categories: {
                 format: "%s",
@@ -26,7 +26,7 @@
                 suffix: " mm",
                 name: "Rainfall",
                 type: "column"
-            },{
+            }, {
                 data: [7.0, 6.9, 9.5, 14.5, 18.2, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6],
                 min: [5.0, 4.9, 7.5, 12.5, 8.2, 17.5, 15.2, 16.5, 13.3, 8.3, 3.9, 4.6],
                 max: [10.0, 8.9, 11.5, 16.5, 21.2, 30.5, 32.2, 29.5, 24.3, 28.3, 23.9, 24.6],
@@ -96,8 +96,9 @@
             }
         };
 
-		var chart = new frnk.UI.Charts.LineChart("#chart", data, options);
-		chart.draw();
+        var chart = new Sdl.D3charts.LineChart("#chart", data, options);
+        chart.draw();
     </script>
 </body>
+
 </html>
