--- a/src/examples/area-stepbefore.html
+++ b/src/examples/area-stepbefore.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Area Chart - Step Before</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
-    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../dist/js/d3.charts.js"></script>
+    <script src="../../dist/js/lib.bundle.js"></script>
 </head>
+
 <body>
     <div id="chart" />
     <script>
@@ -26,7 +27,7 @@
             }]
         };
 
-		var options = {
+        var options = {
             plotOptions: {
                 area: {
                     visible: true
@@ -74,8 +75,9 @@
             }
         };
 
-		var chart = new frnk.UI.Charts.LineChart("#chart", data, options);
-		chart.draw();
+        var chart = new Sdl.D3charts.LineChart("#chart", data, options);
+        chart.draw();
     </script>
 </body>
+
 </html>
