--- a/src/examples/column-basic.html
+++ b/src/examples/column-basic.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Column Chart - 100% Stacked</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
-    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../dist/js/d3.charts.js"></script>
+    <script src="../../dist/js/lib.bundle.js"></script>
 </head>
+
 <body>
     <div id="chart" />
     <script>
@@ -45,7 +46,7 @@
                 position: "right",
                 width: 200
             },
-           titleArea: {
+            titleArea: {
                 text: "Column Chart - Basic",
                 align: "center",
                 height: 50,
@@ -80,8 +81,9 @@
             }
         };
 
-		var chart = new frnk.UI.Charts.ColumnChart("#chart", data, options);
-		chart.draw();
+        var chart = new Sdl.D3charts.ColumnChart("#chart", data, options);
+        chart.draw();
     </script>
 </body>
+
 </html>
