--- a/src/examples/donut-basic.html
+++ b/src/examples/donut-basic.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Donut Chart - Basic</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
-    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../dist/js/d3.charts.js"></script>
+    <script src="../../dist/js/lib.bundle.js"></script>
 </head>
+
 <body>
     <div id="chart" />
     <script>
@@ -23,7 +24,7 @@
             }]
         };
 
-		var options = {
+        var options = {
             plotOptions: {
                 pie: {
                     innerRadius: 0.6
@@ -37,7 +38,7 @@
                 position: "right",
                 width: 200
             },
-           titleArea: {
+            titleArea: {
                 text: "Donut Chart - Basic",
                 align: "center",
                 height: 50
@@ -53,8 +54,9 @@
             }
         };
 
-		var chart = new frnk.UI.Charts.PieChart("#chart", data, options);
-		chart.draw();
+        var chart = new Sdl.D3charts.PieChart("#chart", data, options);
+        chart.draw();
     </script>
 </body>
+
 </html>
