--- a/src/examples/line-dual-axes.html
+++ b/src/examples/line-dual-axes.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Line Chart - Dual Axis</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
-    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../dist/js/d3.charts.js"></script>
+    <script src="../../dist/js/lib.bundle.js"></script>
 </head>
+
 <body>
     <div id="chart" />
     <script>
@@ -49,7 +50,7 @@
                 position: "right",
                 width: 200
             },
-           titleArea: {
+            titleArea: {
                 text: "Line Chart - Dual Axes",
                 align: "center",
                 height: 50,
@@ -88,8 +89,9 @@
             }
         };
 
-		var chart = new frnk.UI.Charts.LineChart("#chart", data, options);
-		chart.draw();
+        var chart = new Sdl.D3charts.LineChart("#chart", data, options);
+        chart.draw();
     </script>
 </body>
+
 </html>
