--- a/src/examples/line-labels.html
+++ b/src/examples/line-labels.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <title>Line Chart - Labels</title>
     <!-- general styles -->
     <link rel="stylesheet" href="../../dist/css/style.css" />
     <link rel="stylesheet" href="../../dist/css/d3charts.css" />
-    <script src="../../dist/js/d3.min.js" charset="utf-8"></script>
-    <script src="../../dist/js/d3.charts.js"></script>
+    <script src="../../dist/js/lib.bundle.js"></script>
 </head>
+
 <body>
     <div id="chart" />
     <script>
@@ -43,7 +44,7 @@
                 position: "right",
                 width: 200
             },
-           titleArea: {
+            titleArea: {
                 text: "Line Chart - Labels",
                 align: "center",
                 height: 50
@@ -77,8 +78,9 @@
             }
         };
 
-		var chart = new frnk.UI.Charts.LineChart("#chart", data, options);
-		chart.draw();
+        var chart = new Sdl.D3charts.LineChart("#chart", data, options);
+        chart.draw();
     </script>
 </body>
+
 </html>
